<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:text="@string/iot_demo"
            android:gravity="center"
            android:textColor="#ff0000"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="40"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTemperature"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#91672C"
            android:gravity="center"
            android:text="@string/c"
            android:textSize="28sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtIntensity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#0000ff"
            android:gravity="center"
            android:text="--Lx"
            android:textSize="28sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txtHumidity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#0000ff"
            android:gravity="center"
            android:text="--%"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.github.angads25.toggle.widget.LabeledSwitch
        android:id="@+id/btnBump"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="30sp"
        android:enabled="true"
        app:textOn = "ON"
        app:textOff = "OFF"
        app:on="false"
        app:colorBorder="@color/colorAccent"/>

    <com.github.angads25.toggle.widget.LabeledSwitch
        android:id="@+id/btnLED"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="30sp"
        android:enabled="true"
        app:textOn = "ON"
        app:textOff = "OFF"
        app:on="false"
        app:colorBorder="@color/colorAccent"/>

</LinearLayout>